L1VMgodata - (0.9.3)
    Removed the regex command search and use HasPrefix now.

-- Stefan Pietzonke <jay-t@gmx.net> Fri 26 Jul 20:09 +0200

L1VMgodata - (0.9.2)
   NEW: "get regex key" command to get a regex match of a key search string.

-- Stefan Pietzonke <jay-t@gmx.net> Sat 13 Jul 22:07 +0200

L1VMgodata - (0.9.1)
   Data base now tries to allocate space for more data if max data size is reached.

-- Stefan Pietzonke <jay-t@gmx.net> Sun 16 21:53 +0200

L1VMgodata - (0.9.0)
    Added links for linking between keys.

-- Stefan Pietzonke <jay-t@gmx.net> Fri 29 Dec 2023 05:46 +0100

L1VMgodata - (0.8.1)
    Added trim for data return functions: '\n' in datafunc.go.

-- Stefan Pietzonke <jay-t@gmx.net> Thu 21 Dec 2023 10:49 +0100

L1VMgodata - (0.8.0)
    NEW: web browser interface form.
    Now you can switch it off by using "off" as the port!

    Now you can load multiple databases, as long there is enough space in set max entries!

    NEW: speeded up reading the database by removing print line!

    NEW: exit command to quit the database.

-- Stefan Pietzonke <jay-t@gmx.net> Wed 03 May 2023 20:56 +0200

L1VMgodata - (0.7.1)
    NEW: "erase all" command to delete the whole data base enttries.
    Handle with care!

    NEW: now the store data command overwrites existing entries if the same key was used more than one time!

-- Stefan Pietzonke <jay-t@gmx.net> Thu 26 Apr 2022 17:02 +0200


L1VMgodata - (0.7)
    Initial commit with some TCP/IP server socket code.
    This is my first go project. It will be a data base if it finished.

    Added data handling functions.
    Added mutexes, removed not needed constants.
    Added store data sockets code.
    Added get key call. Added get value call.
    Added remove data function.
    Remove data function added.

    Added save/load functions, to write/read from disk.
    Now the port and the maxdata data limit can be set on command line.

    NEW: processClient error code checks.
